--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,30 +1,45 @@
 {% extends 'base.html' %}
 {% block content %}
-<section id="cart" class="section-p1">
-    <table style="width: 50%;">
-        <thead>
-            <tr>
-                <td style="width: 20px;">Image</td>
-                <td style="width: 50px;">Product</td>
-                <td style="width: 20px;">Price</td>
-                <td style="width: 20px;">Quantity</td>
-            </tr>
-        </thead>
-        <tbody>
-        {% for x in cart_item %}
-            <tr>
-                <td><img src="{{ x.product.images.url }}" ></td>
-                <td>{{x.product}}</td>
-                <td>$ {{x.product.price}}</td>
-                <td>{{x.quantity}}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <div id="bill_address">
-      <h4 class="mb-3">Billing address</h4>
-      <form action="{% url 'place_order' %}" method="POST" class="needs-validation" novalidate>
+<div class="container text-center my-3">
+  <div class="table-responsive">
+    <table class="table" style="width: 800px;">
+      <tr>
+          <th style="width: 100px;">Image</th>
+          <th>Product</th>
+          <th>Variations</th>
+          <th>Price</th>
+          <th>Subtotal</th>
+      </tr>
+      {% for x in cart_item %}
+      <tr>
+          <td><a href="{{ x.product.get_url }}"><img src="{{ x.product.images.url }}" width="65%"></a></td>
+          <td><a href="{{ x.product.get_url }}">{{x.product}}</a></td>
+          <td style="font-size: small;" >size : {{ x.size }} <br> color : {{ x.color }}</td>
+          <td>$ {{x.product.price}}</td>
+          <td>$ {{x.sub_total}}</td>
+      </tr>
+      {% endfor %}
+     </table>
+  </div>
+</div>
+
+
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md-8" style="max-width: 250px;">
+      <h6 class="my-3"><i style="color:#fb8500 ;" class="fal fa-shield-check"></i> Your cart have 4 item</h6>
+    </div>
+    <div class="col-md-8" style="max-width: 250px;">
+      <h6 class="my-3"><i style="color:#073b4c ;" class="fal fa-sack-dollar"></i> Amount Payable $ {{ grand_total }}</h6>
+    </div>
+  </div>
+</div>
+
+
+    <div class="container mx-5 p-3"style="min-width: 350px;max-width:40%;border:1px solid #83c5be;">
+        <h4 class="mb-3">Billing address</h4>
+        <form action="{% url 'place_order' %}" method="POST" class="needs-validation" novalidate>
         {% csrf_token %}
         <div class="row g-3">
           <div class="col-sm-6">
@@ -34,7 +49,7 @@
               Valid first name is required.
             </div>
           </div>
-
+    
           <div class="col-sm-6">
             <label for="lastName" class="form-label">Last name</label>
             <input type="text" name="lastname" class="form-control" id="lastName" placeholder="" value="" required>
@@ -42,7 +57,7 @@
               Valid last name is required.
             </div>
           </div>
-
+    
           <div class="col-12">
             <label for="username" class="form-label">Phone number</label>
             <div class="input-group has-validation">
@@ -52,7 +67,7 @@
               </div>
             </div>
           </div>
-
+    
           <div class="col-12">
             <label for="email" class="form-label">Email</label>
             <input type="email" name="email" class="form-control" id="email" placeholder="you@example.com">
@@ -60,7 +75,7 @@
               Please enter a valid email address for shipping updates.
             </div>
           </div>
-
+    
           <div class="col-12">
             <label for="address" class="form-label">Address</label>
             <input type="text" name="address1" class="form-control" id="address" placeholder="1234 Main St" required>
@@ -68,12 +83,12 @@
               Please enter your shipping address.
             </div>
           </div>
-
+    
           <div class="col-12">
             <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
             <input type="text" name="address2" class="form-control" id="address2" placeholder="Apartment or suite">
           </div>
-
+    
           <div class="col-md-5">
             <label for="country" class="form-label">Country</label>
             <input type="text" name="country" class="form-control" id="country" placeholder="" required>
@@ -81,7 +96,7 @@
               Country required.
             </div>
           </div>
-
+    
           <div class="col-md-3">
             <label for="state" class="form-label">State</label>
             <input type="text" name="state" class="form-control" id="state" placeholder="" required>
@@ -89,7 +104,7 @@
               State required.
             </div>
           </div>
-
+    
          
           <div class="col-md-3">
             <label for="zip" class="form-label">City</label>
@@ -102,37 +117,17 @@
         <hr class="my-4">
         <h4 class="mb-3">Payment</h4>
         <hr class="my-4">
-        <button class="w-100 btn btn-primary btn-lg" type="submit">Place Order</button>
-      </form>
-    </div>
-</section>
-
-<section id="cart-add" class="section-p1">
-    <div id="subtotal">
-        <h3>Cart Totals</h3>
-        <table>
-            <tr>
-                <td>Cart Subtotal</td>
-                <td>$ {{ total }}</td>
-            </tr>
-            <tr>
-                <td>Tax</td>
-                <td>$ {{ tax }}</td>
-            </tr>
-            <!-- <tr>
-              <td>Discount</td>
-              <td>$ {{ discount }}</td>
-          </tr> -->
-            <tr>
-                <td><strong>Total</strong></td>
-                <td><strong>$ {{ grand_total }}</strong></td>
-            </tr>
-        </table>
+        <button class="btn btn-sm btn-primary px-3 m-3 " type="submit">Place Order</button>
+        </form>
     </div>
 
+
+
+
+
+
     
-    
-</section>
+
 
         
   
