--- a/templates/payment.html
+++ b/templates/payment.html
@@ -8,11 +8,11 @@
 	<div class="container">
 
 		<!-- ============================ COMPONENT 1 ================================= -->
-		<h4 class="text-center" style="padding: 50px;">Review Your Order and Make Payment</h4>
+		<h4 class="text-center my-3">Review Your Order and Make Payment</h4>
 		<div class="row">
 
 			<aside class="col-lg-8">
-				<div class="card">
+				<div class="card my-3">
 					<h5 class="card-header">Billing Address</h5>
 					<div class="card-body">
 						<p class="card-text mb-0">{{order.full_name}}</p>
@@ -28,14 +28,14 @@
 
 					</div>
 				</div>
-				<div class="card">
+				<div class="card my-3">
 					<h5 class="card-header">Payment Method</h5>
 					<div class="card-body">
 						<p class="card-text">PayPal</p>
 
 					</div>
 				</div>
-				<div class="card">
+				<div class="card my-3">
 					<h5 class="card-header">Review Products</h5>
 					<div class="card-body">
 						<table class="table table-borderless table-shopping-cart">
@@ -43,8 +43,9 @@
                                 <tr>
                                     <td style="width: 100px;">Image</td>
                                     <td style="width: 300px;">Product</td>
+									<td style="width: 150px;">Variations</td>
                                     <td style="width: 150px;">Price</td>
-                                    <td style="width: 250px;">Quantity</td>
+                                    <td style="width: 150px;">Quantity</td>
                                     <td>Subtotal</td>
                                 </tr>
 							</thead>
@@ -53,6 +54,7 @@
                                     <tr>
                                         <td><img src="{{ x.product.images.url }}" width="50px" ></td>
                                         <td>{{x.product}}</td>
+										<td style="font-size: small;" >size : {{ x.size }} <br> color : {{ x.color }}</td>
                                         <td>$ {{x.product.price}}</td>
                                         <td>{{x.quantity}}</td>
                                         <td>$ {{x.sub_total}}</td>
@@ -65,9 +67,9 @@
 				</div>
 
 			</aside> <!-- col.// -->
-			<aside class="col-lg-4">
 
-				<div class="card">
+			<aside class="col-lg-4">
+				<div class="card my-3">
 					<div class="card-body">
 						<dl class="dlist-align">
 							<dt>Total price:</dt>
