--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,36 +1,48 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <section id="prodetails" class="section-p1">
-        <div class="single-pro-image">
-            <img src="{{single_product.images.url}}" style="margin-bottom: 6px ;" width="100%" id="main-img" alt="">
-        </div>
-        <div class="single-pro-details">
-            <form action="{% url 'add_cart' single_product.id single_product.size single_product.color %}" method="GET">
-            <h6> Home / T-Shirt</h6>
-            <h4>{{single_product.product_name}}</h4>
-            <h2>$ {{single_product.price}}</h2>
-
-            <div class="card" style="width: 30%;border: none;">
-                <select name="size" class="form-select form-select-sm" aria-label=".form-select-sm example">
-                    {% for x in sizes %}
-                    <option value1="{{ x.size }}">{{ x.size }}</option>
-                    {% endfor %}
-                  </select>
+  <!-- productdetails -->
+    <div class="container p-3">
+    <div class="row">
+        <div class="col">
+            <div class="card"style="border: 2px solid rgb(189, 199, 193);">
+                <img src="{{single_product.images.url}}">
             </div>
-
-            <div class="card" style="width: 30%;border: none;">
-                <select name="color" class="form-select form-select-sm" aria-label=".form-select-sm example">
-                    {% for x in colors %}
-                    <option value2="{{ x.color }}">{{ x.color }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <button type="submit">Add To Cart</button>
-            <h4>{{single_product.description}}</h4>
-            </form>
         </div>
-    </section>
+        <div class="col">
+            <div class="card p-3 my-3" style="border: 2px solid rgb(189, 199, 193);">
+                <form action="{% url 'add_cart' single_product.id single_product.size single_product.color %}" method="GET">
+                    <h6> {{ single_product.category }}</h6>
+                    <h4>{{single_product.product_name}}</h4>
+                    <h2 >$ {{single_product.price}}</h2>
+        
+                    <div class="card py-1" style="width: 30%;border: none;">
+                        <select name="size" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                            {% for x in sizes %}
+                            <option value1="{{ x.size }}">{{ x.size }}</option>
+                            {% endfor %}
+                          </select>
+                    </div>
+        
+                    <div class="card py-1" style="width: 30%;border: none;">
+                        <select name="color" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                            {% for x in colors %}
+                            <option value2="{{ x.color }}">{{ x.color }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="btn-group m-3" role="group" aria-label="Basic outlined example">
+                        <button type="submit" class="btn btn-outline-success px-3"><i class="far fa-shopping-cart"></i></button>
+                        <button type="button" class="btn btn-outline-primary px-3"><i class="far fa-heart"></i></button>
+                    </div>
+                    <h4>{{single_product.description}}</h4>
+                    </form>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
 
 
 {% endblock %}
