--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/funn.css' %}">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <title>signin</title>
 </head>
 <body>
@@ -22,8 +22,8 @@
     Already verified? <a href="{% url 'signin' %}">Signin</a>
     </div>
     {% else %}
-    <div class="container-signin">
-        <form  action="" method="POST" style="margin: 10px;">
+    <div class="card m-5 p-3 mx-auto"style="max-width: 30%; min-width: 250px;; border: 2px solid seagreen;">
+        <form  action="#" method="POST" style="margin: 10px;">
           {% csrf_token %}
             <!-- <div class="form-outline mb-4">
                 <label class="form-label" for="form1Example1">User Name</label>
@@ -40,8 +40,8 @@
                 <label class="form-label" for="form1Example2">Password</label>
                 <input type="password" name="password" id="form1Example2" class="form-control" />
               </div>
-              <button type="submit" class="btn btn-success" style="position: relative; left: 35%;">Sign in</button>
-              <p style="position: relative;top:25px">Not a member? <a href="{% url 'signup' %}">Sign Up</a></p>
+              <button type="submit" class="btn btn-success btn-sm m-1">Sign in</button>
+              <p style="position: relative;top:25px">not a member? <a href="{% url 'signup' %}">sign up</a></p>
         </form>
     </div>
     {% endif %}
