--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/funn.css' %}">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-      
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <title>Signup</title>
 </head>
 <body>
-    <div class="container-signup">
+    <div class="container m-5 p-3 mx-auto" style="max-width: 30%; min-width: 250px; border: 2px solid seagreen;">
         <form action="#" method="POST" style="margin: 10px;">
           {% csrf_token %}
             <div class="form-outline mb-4">
@@ -36,8 +36,8 @@
                 <label class="form-label" for="form1Example4">Password again</label>
                 <input type="password" name="password2" id="form1Example4" class="form-control" />
               </div>
-              <button type="submit" class="btn btn-success" style="position: relative; left: 35%;">Sign up</button>
-              <p style="position: relative;top:25px">Already a member? <a href="{% url 'signin' %}">Sign in</a></p>
+              <button type="submit" class="btn btn-success btn-sm m-1">Sign up</button>
+              <p class="m-1">already a member? <a href="{% url 'signin' %}">sign in</a></p>
         </form>
     </div>
 </body>
