first version completed

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 {% if not cart_item %}
-    <h4> Sorry Your Cart is Empty ! </h4>
+    <h4 class="text-center m-3"> Sorry Your Cart is Empty ! </h4>
 {% else %}
     <div class=" my-3 container text-center ">
         <div class="table-responsive">
