--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="{% static 'images/android-chrome-512x512.png' %}" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <title>index</title>
+  <title>My Shop | One of the Biggest Online Shopping Platform</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -20,7 +21,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg bg-light sticky-top px-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">Navbar</a>
+      <a class="navbar-brand" href="{% url 'home' %}">My Shop</a>
       <ul class="nav" style="font-size:x-large;">
         <li class="nav-item">
             <a class="nav-link" style="color:rgb(70, 65, 65) ;" href="{% url 'cart' %}"><i class="far fa-shopping-cart">
@@ -28,8 +29,8 @@
             </i></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" style="color:rgb(70, 65, 65) ;" href="#"><i class="far fa-heart">
-                <span class="badge rounded-pill text-bg-danger $badge-font-size: .5em;" style="font-size:x-small ;">2</span>
+            <a class="nav-link" style="color:rgb(70, 65, 65) ;" href="{% url 'favourite' %}"><i class="far fa-heart">
+                <span class="badge rounded-pill text-bg-danger $badge-font-size: .5em;" style="font-size:x-small ;">{{ fav_count }}</span>
             </i></a>
         </li>
       </ul>
@@ -51,24 +52,10 @@
               {% endfor %}
             </ul>
           </li>
-          <li class="nav-item dropdown px-3">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Profile
-            </a>
-            <ul class="dropdown-menu">
-              {% if user.is_authenticated %}
-              <li><a class="dropdown-item" href="#">Dashboard</a></li>
-              <li><a class="dropdown-item" href="{% url 'logout' %}">Log out</a></li>
-              {% else %}
-              <li><a class="dropdown-item" href="{% url 'signup' %}">Register</a></li>
-              <li><a class="dropdown-item" href="{% url 'signin' %}">Sign in</a></li>
-              {% endif %}
-            </ul>
-          </li>
         </ul>
         <form class="d-flex" action="{% url 'search' %}" method="GET" role="search">
             <input name="keyword" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-secondary btn-sm" type="submit"><i class="fal fa-search"></i></button>
           </form>
       </div>
     </div>
@@ -76,19 +63,23 @@
 
 
       <!-- nav-head -->
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sign in</a>
+      <ul class="nav justify-content-center" style="background-color:#eee8d8;">
+        <li class="nav-item" >
+          {% if user.is_authenticated %}
+          <a class="nav-link" style="color: #2a9d8f;" href="{% url 'logout' %}">Log out</a>
+          {% else %}
+          <a class="nav-link" style="color: #2a9d8f;" href="{% url 'signin' %}">sign in</a>
+          {% endif %}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" style="color: #2a9d8f;" href="{% url 'dashboard' %}">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
+          <a class="nav-link" style="color: #2a9d8f;" href="{% url 'my_orders' %}">My orders</a>
         </li>
         <li class="nav-item">
           {% if user.is_authenticated %}
-          <p style="font-size:small;color:rgb(250, 239, 239);background-color:cadetblue;border-radius: 50px;">welcome {{user}}</p>
+          <p class="px-1" style="font-size:small;color:rgb(250, 239, 239);background-color:cadetblue;border-radius: 50px;">welcome {{user}}</p>
           {% endif %}
         </li>
     </ul>
@@ -96,6 +87,8 @@
 {% block content %}
 
 {% endblock %}
+
+<!-- footer -->
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -105,8 +98,10 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
     </ul>
-    <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
+    <p class="text-center text-muted">&copy; 2022 aromalsatheesh test-shop</p>
   </footer>
 </div>
+
+
 </body>
 </html>
