--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -14,7 +14,7 @@
       {% for x in cart_item %}
       <tr>
           <td><a href="{{ x.product.get_url }}"><img src="{{ x.product.images.url }}" width="65%"></a></td>
-          <td><a href="{{ x.product.get_url }}">{{x.product}}</a></td>
+          <td><a href="{{ x.product.get_url }}"style="text-decoration:none;color:#2a9d8f;">{{x.product}}</a></td>
           <td style="font-size: small;" >size : {{ x.size }} <br> color : {{ x.color }}</td>
           <td>$ {{x.product.price}}</td>
           <td>$ {{x.sub_total}}</td>
@@ -28,7 +28,7 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-md-8" style="max-width: 250px;">
-      <h6 class="my-3"><i style="color:#fb8500 ;" class="fal fa-shield-check"></i> Your cart have 4 item</h6>
+      <h6 class="my-3"><i style="color:#fb8500 ;" class="fal fa-shield-check"></i> Your cart have {{ cart_count }} item</h6>
     </div>
     <div class="col-md-8" style="max-width: 250px;">
       <h6 class="my-3"><i style="color:#073b4c ;" class="fal fa-sack-dollar"></i> Amount Payable $ {{ grand_total }}</h6>
@@ -39,7 +39,7 @@
 
     <div class="container mx-5 p-3"style="min-width: 350px;max-width:40%;border:1px solid #83c5be;">
         <h4 class="mb-3">Billing address</h4>
-        <form action="{% url 'place_order' %}" method="POST" class="needs-validation" novalidate>
+        <form action="{% url 'place_order' %}" method="POST" class="needs-validation" >
         {% csrf_token %}
         <div class="row g-3">
           <div class="col-sm-6">
@@ -70,7 +70,7 @@
     
           <div class="col-12">
             <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" class="form-control" id="email" placeholder="you@example.com">
+            <input type="email" name="email" class="form-control" id="email" placeholder="you@example.com" required>
             <div class="invalid-feedback">
               Please enter a valid email address for shipping updates.
             </div>
