--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -10,11 +10,13 @@
             </div>
         </div>
         <div class="col">
-            <div class="card p-3 my-3" style="border: 2px solid rgb(189, 199, 193);">
+            <div class="card p-3 my-3" style="background-color:rgb(220, 233, 233) ;">
                 <form action="{% url 'add_cart' single_product.id single_product.size single_product.color %}" method="GET">
-                    <h6> {{ single_product.category }}</h6>
-                    <h4>{{single_product.product_name}}</h4>
-                    <h2 >$ {{single_product.price}}</h2>
+                    <div style="width: 80px;background-color:rgb(28, 92, 70);color:white; border-radius: 5px;">
+                        <h6 class="px-3"> {{ single_product.category }}</h6>
+                    </div>
+                    <h4 style="color:rgb(63, 104, 85) ;">{{single_product.product_name}}</h4>
+                    <h2 style="font-size:medium ; color: brown;" >$ {{single_product.price}}</h2>
         
                     <div class="card py-1" style="width: 30%;border: none;">
                         <select name="size" class="form-select form-select-sm" aria-label=".form-select-sm example">
@@ -33,9 +35,9 @@
                     </div>
                     <div class="btn-group m-3" role="group" aria-label="Basic outlined example">
                         <button type="submit" class="btn btn-outline-success px-3"><i class="far fa-shopping-cart"></i></button>
-                        <button type="button" class="btn btn-outline-primary px-3"><i class="far fa-heart"></i></button>
+                        <a href="{% url 'add_fav' single_product.slug %}" type="button" class="btn btn-outline-primary px-3"><i class="far fa-heart"></i></a>
                     </div>
-                    <h4>{{single_product.description}}</h4>
+                    <h4 style="font-size:large ;">{{single_product.description}}</h4>
                     </form>
             </div>
         </div>
