--- a/templates/store.html
+++ b/templates/store.html
@@ -18,11 +18,22 @@
         {% for x in search_products %}
         <div class="col">
           <div class="card m-3" style="width: 13rem; height: auto;border-radius: 30px;">
+              {% if x.stock < 1 %}
+              <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% else %}
               <a href="{{ x.get_url }}"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% endif %}
               <div class="card-body">
                 <h5 class="card-title">{{ x.product_name }}</h5>
-                <p class="card-text m-1">$ {{x.price}}</p>
-                <a href="#" class="btn btn-sm btn-outline-primary">View details</a>
+                <p class="card-text m-1" style="font-size:x-large ; color: brown;">$ <strong>{{x.price}}</strong></p>
+                {% if x.stock < 1 %}
+                <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-outline-danger btn-sm">sold out</a>
+                {% else %}
+                <div class="btn-group m-1" role="group" aria-label="Basic outlined example">
+                  <a href="{{ x.get_url }}" class="btn btn-outline-secondary px-3"><i class="fas fa-eye"></i></a>
+                  <a href="{% url 'add_fav' x.slug %}" class="btn btn-outline-secondary px-3"><i class="far fa-heart"></i></a>
+                </div>
+                {% endif %}
               </div>
           </div>
         </div>
@@ -33,11 +44,22 @@
         {% for x in product %}
         <div class="col">
           <div class="card m-3" style="width: 13rem; height: auto;border-radius: 30px;">
+              {% if x.stock < 1 %}
+              <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% else %}
               <a href="{{ x.get_url }}"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% endif %}
               <div class="card-body">
                 <h5 class="card-title">{{ x.product_name }}</h5>
-                <p class="card-text m-1">$ {{x.price}}</p>
-                <a href="#" class="btn btn-sm btn-outline-primary">View details</a>
+                <p class="card-text m-1"style="font-size:x-large ; color: brown;">$ <strong>{{x.price}}</strong></p>
+                {% if x.stock < 1 %}
+                <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-outline-danger btn-sm">sold out</a>
+                {% else %}
+                <div class="btn-group m-1" role="group" aria-label="Basic outlined example">
+                  <a href="{{ x.get_url }}" class="btn btn-outline-secondary px-3"><i class="fas fa-eye"></i></a>
+                  <a href="{% url 'add_fav' x.slug %}" class="btn btn-outline-secondary px-3"><i class="far fa-heart"></i></a>
+                </div>
+                {% endif %}
               </div>
           </div>
         </div>
@@ -46,11 +68,22 @@
         {% for x in single_category %}
         <div class="col">
           <div class="card m-3" style="width: 13rem; height: auto;border-radius: 30px;">
-              <a href="{{ x.product.get_url }}"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% if x.stock < 1 %}
+              <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% else %}
+              <a href="{{ x.get_url }}"> <img src="{{ x.images.url }}" width="auto" class="card-img-top p-3" alt=""></a>
+              {% endif %}
               <div class="card-body">
                 <h5 class="card-title">{{ x.product_name }}</h5>
-                <p class="card-text m-1">$ {{x.price}}</p>
-                <a href="#" class="btn btn-sm btn-outline-primary">View details</a>
+                <p class="card-text m-1" style="font-size:x-large ; color: brown;">$ <strong>{{x.price}}</strong></p>
+                {% if x.stock < 1 %}
+                <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-outline-danger btn-sm">sold out</a>
+                {% else %}
+                <div class="btn-group m-1" role="group" aria-label="Basic outlined example">
+                  <a href="{{ x.get_url }}" class="btn btn-outline-secondary px-3"><i class="fas fa-eye"></i></a>
+                  <a href="{% url 'add_fav' x.slug %}" class="btn btn-outline-secondary px-3"><i class="far fa-heart"></i></a>
+                </div>
+                {% endif %}
               </div>
           </div>
         </div>
@@ -60,7 +93,77 @@
     {% endif %}
  </div>
 
+ <!-- product pagination -->
+ <nav style="margin-left: 40%; " aria-label="Page navigation sample">
+	{% if product.has_other_pages %}
+	  <ul class="pagination">
+			{% if product.has_previous %}
+	    <li class="page-item"><a class="page-link" href="?page={{product.previous_page_number}}">Previous</a></li>
+			{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+			{% endif %}
 
+			{% for i in product.paginator.page_range %}
+				{% if product.number == i %}
+	    		<li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+				{% else %}
+					<li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+				{% endif %}
+	    {% endfor %}
+
+			{% if product.has_next %}
+	    	<li class="page-item"><a class="page-link" href="?page={{product.next_page_number}}">Next</a></li>
+			{% else %}
+				<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+			{% endif %}
+	  </ul>
+	{% endif %}
+</nav>
+
+ <!-- product-category pagination -->
+ <nav style="margin-left: 40%; " aria-label="Page navigation sample">
+	{% if single_category.has_other_pages %}
+	  <ul class="pagination">
+			{% if single_category.has_previous %}
+	    <li class="page-item"><a class="page-link" href="?page={{single_category.previous_page_number}}">Previous</a></li>
+			{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+			{% endif %}
+
+			{% for i in single_category.paginator.page_range %}
+				{% if single_category.number == i %}
+	    		<li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+				{% else %}
+					<li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+				{% endif %}
+	    {% endfor %}
+
+			{% if single_category.has_next %}
+	    	<li class="page-item"><a class="page-link" href="?page={{single_category.next_page_number}}">Next</a></li>
+			{% else %}
+				<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+			{% endif %}
+	  </ul>
+	{% endif %}
+</nav>
+
+
+
+<!-- stock sold out model  -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <i class="fal fa-sad-tear" style="font-size:xx-large ;color:cadetblue"></i>
+        <h4 style="color:brown ;">Sorry product is currently out of stock, Try again later</h4>
+      </div>
+    </div>
+  </div>
+</div>
     
  
 
