--- a/templates/signin.html
+++ b/templates/signin.html
@@ -44,6 +44,8 @@
                 <p class="text-end" >forgot password? <a href="{% url 'forgot_password' %}">get new</a></p>
               </div>
               <button type="submit" class="btn btn-success btn-sm m-1">Sign in</button>
+              <a href="{% url 'home' %}" class="btn btn-primary btn-sm m-1">Home</a>
+
               <p style="position: relative;top:25px">not a member? <a href="{% url 'signup' %}">sign up</a></p>
         </form>
     </div>
