--- a/templates/signup.html
+++ b/templates/signup.html
@@ -35,6 +35,7 @@
                 <input type="password" name="password2" id="form1Example4" class="form-control" />
               </div>
               <button type="submit" class="btn btn-success btn-sm m-1">Sign up</button>
+              <a href="{% url 'home' %}" class="btn btn-primary btn-sm m-1">Home</a>
               <p class="m-1">already a member? <a href="{% url 'signin' %}">sign in</a></p>
         </form>
     </div>
