--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 
 <!-- banner -->
-<img src="https://preview.colorlib.com/theme/cozastore/images/xslide-03.jpg.pagespeed.ic.tP-L47NU9M.webp" class="img-fluid p-3" alt="#">    
+<img src="{% static 'images/ecommerce_home.png' %}" class="img-fluid p-3" alt="#">    
 
 <!-- post -->
 <div class="container text-center d-flex flex-column align-items-center ">
